# bstring

./: .gitignore  .travis.yml  COPYING  Doxyfile.in  Makefile.am  README.md  SECURITY.md  bsafe.pc.in  bstest.c  bstring++.pc.in  bstring.pc.in  bstrlib.txt  bstrwrap.cpp  bstrwrap.h  configure.ac  cpptest.cpp  index.html  license.txt  meson.build  meson_options.txt  params.json  security.txt  sonar-project.properties  test.cpp  testaux.c
.clusterfuzzlite/: Dockerfile  build.sh
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: build.yml  fuzz.yml  scorecard.yml  test.yml
bstring/: Makefile.am  bsafe.c  bsafe.h  bstraux.c  bstraux.h  bstrlib.c  bstrlib.h  bstrwrap.cpp  bstrwrap.h  buniutil.c  buniutil.h  meson.build  utf8util.c  utf8util.h
doc/: Doxyfile.in  annotated.html  bstraux_8h.html  bstraux_8h_source.html  bstrlib_8h.html  bstrlib_8h_source.html  buniutil_8h.html  buniutil_8h_source.html  classes.html  comparisons.md  dir_290bd8d1f1bf4a1cedefb2564c454673.html  doxygen.css  doxygen_crawl.html  files.html  globals.html  globals_defs.html  globals_func.html  index.html  introduction.md  md_comparisons.html  md_porting.html  md_security.html  menudata.js  meson.build  pages.html  porting.md  security.md  structbstrList.html  structtagbstring.html  structutf8Iterator.html  utf8util_8h.html  utf8util_8h_source.html
doc/search/: all_0.js  all_1.js  all_12.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_3.js  all_4.js  all_5.js  all_6.js  all_62.js  all_7.js  all_8.js  all_a.js  all_b.js  all_c.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_62.js  classes_74.js  defines_0.js  defines_62.js  files_0.js  files_1.js  files_62.js  functions_0.js  functions_62.js  pages_10.js  pages_11.js  pages_13.js  pages_15.js  pages_16.js  pages_17.js  (+17 more)
fuzz/: README.md  fuzz_bstring.c  meson.build
fuzz/corpus/: 01_hello_world  02_html_markup  03_underscore_split  04_base64  05_empty  06_embedded_nul  07_newlines  08_whitespace  09_long_string  10_sgml_entities  11_utf8_multibyte  12_utf8_malformed  13_utf16le_bom  14_utf16be_bom  15_ucs4_codepoints  16_surrogate_codepoints
m4/: cflags.m4  check.mk  cxxflags.m4  doxygen.m4  doxygen.mk  gdb.m4  gdb.mk  ldflags.m4  valgrind.m4  valgrind.mk
stylesheets/: stylesheet.css
tests/: Makefile.am  bstest.c  cpptest.cpp  meson.build  test.cpp  testaux.c  testutf8.c
