option(
    'enable-bgets-workaround',
    type: 'boolean',
    value: false,
    description: 'Enable workaround that renames bgets function to bgetstring',
)
option(
    'enable-docs',
    type: 'boolean',
    value: false,
    description: 'Generate and install documentation',
)
option(
    'enable-tests',
    type: 'boolean',
    value: false,
    description: 'Build unit tests',
)
option(
    'enable-utf8',
    type: 'boolean',
    value: true,
    description: 'Build bstring library with UTF-8 support',
)
