option(
    'enable-bgets-workaround',
    type: 'boolean',
    value: false,
    description: 'Enable workaround that renames bgets function to bgetstring',
)
option(
    'enable-docs',
    type: 'boolean',
    value: false,
    description: 'Generate and install documentation',
)
option(
    'enable-fuzzing',
    type: 'boolean',
    value: false,
    description: 'Build libFuzzer fuzz targets (requires clang)',
)
option(
    'enable-old-api',
    type: 'boolean',
    value: false,
    description: 'Enable backward compatibility macros for pre-1.0 API',
)
option(
    'enable-tests',
    type: 'boolean',
    value: false,
    description: 'Build unit tests',
)
option(
    'enable-utf8',
    type: 'boolean',
    value: true,
    description: 'Build bstring library with UTF-8 support',
)
option(
    'fuzz-link-arg',
    type: 'string',
    value: '-fsanitize=fuzzer,address',
    description: 'Linker flag used for fuzz targets (ClusterFuzzLite passes LIB_FUZZING_ENGINE here)',
)
